--- a/src/app/shared/components/how-it-works/how-it-works.component.html
+++ b/src/app/shared/components/how-it-works/how-it-works.component.html
@@ -9,7 +9,7 @@
               <div class="col-xl-8 col-md-7 col-xs-12 bg-head">
                   <p class="main-title">{{'howItWorks.How it works' | translate}}</p>
                   <div class="head">
-                      <p style="color: #FF725F"> <span style="color: #ABABB6;cursor: pointer;"><span routerLink="/">{{'howItWorks.Home' | translate}}</span> </span>/ {{'howItWorks.How it works' | translate}}</p>
+                      <p style="color: #184d47"> <span style="color: #ABABB6;cursor: pointer;"><span routerLink="/">{{'howItWorks.Home' | translate}}</span> </span> / {{'howItWorks.How it works' | translate}}</p>
                   </div>
               </div>
               <div class="col-xl-4 col-md-5 col-xs-12">
