--- a/src/app/shared/components/how-it-works/how-it-works.component.scss
+++ b/src/app/shared/components/how-it-works/how-it-works.component.scss
@@ -1,4 +1,4 @@
-$active_background: transparent linear-gradient(180deg, #fd4965 0%, #fd7363 100%) 0% 0% no-repeat padding-box;
+$active_background: #184d47;
 
 .alaqaar-how-it-works {
     .row {
