--- a/src/app/shared/components/search-result/search-result.component.scss
+++ b/src/app/shared/components/search-result/search-result.component.scss
@@ -235,7 +235,7 @@
 .bage {
     width: 100px;
     // height: 40px;
-    background: transparent linear-gradient(180deg, rgba(253, 73, 101, 1) 0%, rgba(253, 115, 99, 1) 100%) 0% 0% no-repeat padding-box;
+    background: #184d47;
     position: absolute;
     display: inline-block;
     text-align: center;
