--- a/src/app/shared/components/contact-us/contact-us.component.scss
+++ b/src/app/shared/components/contact-us/contact-us.component.scss
@@ -69,7 +69,7 @@
             div {
                 margin-top: 20px;
                 span {
-                    color: #FD7363;
+                    color: #184d47;
                     padding-right: 5px;
                     font-size: 20px;
                 }
