--- a/src/app/shared/components/favourites/favourites.component.html
+++ b/src/app/shared/components/favourites/favourites.component.html
@@ -42,15 +42,30 @@
                             <div class="col-md-12"> 
                                 <div class="card-body" style="cursor: pointer;" (click)="navigateToItemDetails(item)">
                                     <div class="row">
-                                        <div class="col-8">
+                                        <div class="col-12">
+                                            <h6>
+                                                {{ item['title'] }}
+                                            </h6>
                                             <h5 class="card-title">
                                                 {{'propertyDetails.EGP' | translate}}
-                                                <br>{{ numberWithCommas(item['price'])}}
+                                                {{ numberWithCommas(item['price'])}}
                                             </h5>
-                                            <span class="location">
-                                                <img src="../../../../assets/images/noun_Location_1911856@2x.png" alt="..."/>
-                                                {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
-                                            </span>
+                                            
+                                            <div class="space-between">
+                                                <span class="location" >
+                                                    <img src="../../../../assets/images/noun_Location_1911856@2x.png"
+                                                        alt="..." />
+                                                    {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
+                                                </span>
+
+                                                <span class="date">
+                                                    <img src="../../../../assets/images/date.png"
+                                                        alt="..." />
+                                                        {{ 'home.Recently Added.listed_on' | translate }}   
+
+                                                        {{ setDate(item['created_at']) }}
+                                                </span>
+                                            </div>
                                         </div>
                                         <!-- <div class="col-4 float-end">
                                                 <nz-progress
@@ -62,8 +77,8 @@
 
                                     </div>
                                     <div class="card-text">
-                                        <div class="row">
-                                            <div class="col-6 desc" *ngFor="let c of item['criteria'] | slice:0:4">
+                                        <div class="space-between">
+                                            <div class="desc" *ngFor="let c of item['criteria'] | slice:0:4">
                                                 <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
                                                 {{getCriteriaOptions(c)}}
                                             </div>
