--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -22,6 +22,140 @@
                 height: 450px;
             }
         }
+
+        .main-home{
+            padding: 0; 
+            position: relative;
+            display: flex;
+            justify-content: center;
+
+            @media (max-width: 450px) {
+                margin-top: -240px;
+                height: 370px;
+            }
+            
+            .main-image{
+                width: 100%; 
+                filter: brightness(0.5);
+                height: 650px;
+
+                @media (max-width: 450px) {
+                    display: none;
+                }
+            }
+            
+            h1{
+                position: absolute;
+                top: 20%;
+                color: white;
+                font-family: 'Rubik';
+                font-size: calc(1.375rem + 2.5vw);
+
+                @media (max-width: 450px) {
+                    font-size: calc(1.475rem + 3.5vw);
+                    width: 85%;
+                    top: 5%;
+                    width: 85%;
+                }
+            }
+
+            .search-section{
+                display: flex; 
+                align-items: center;
+                position: absolute;
+                top: 40%;
+                width: 35%;
+
+                @media (max-width: 450px) {
+                    top: 40%;
+                    width: 85%;
+                }
+                
+                .search-button{
+                    height: 60px;
+                    border: 0px;
+                    border-radius: 0px 25px 25px 0px;
+                    padding: 0px 15px;
+
+                    @media (max-width: 450px) {
+                        height: 50px;
+
+                    }
+
+                    fa-icon{
+                        font-size: 25px;
+                    }
+                }
+            }
+
+            .other-options{
+                width: 100%;
+                padding: 30px 0px;
+                background: white;
+                position: absolute;
+                bottom: 0px; 
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+
+                @media (max-width: 450px) {
+                    padding: 10px 0px;
+                }
+
+                .each-option{
+                    display: flex; 
+                    align-items: center; 
+                    cursor: pointer;
+
+                    @media (max-width: 450px) {
+                        flex-direction: column;
+                    }
+
+                    .image-options{
+                        width: 60px;
+                    }
+
+                    .text-options{
+                        padding: 0px 10px;
+                        font-size: 20px;
+                        color: #184d47;
+                        display: flex;
+                        flex-direction: column;
+
+                        @media (max-width: 450px) {
+                            font-size: 15px;
+                            align-items: center;
+                            text-align: center;
+                        }
+
+                        img{
+                            display: block; 
+                            width: 100px;
+
+                            @media (max-width: 450px) {
+                                display: none; 
+                            }
+                        }
+                    }
+                }
+
+                .separators{
+                    width: 2px; 
+                    height: 100px;
+                    background: #184d47; 
+
+                    @media (max-width: 450px) {
+                        width: 0.5px; 
+                        height: 50px;
+                    }
+                }
+
+                
+
+
+            }
+        }
+
         .home-controls {
             @media (max-width: 768px) {
                 z-index: 99;
@@ -267,8 +401,8 @@
             background: transparent url("../../assets/images/main_photo.jpg") 0% 0% no-repeat padding-box;
             background-size: contain;
             @media (max-width: 450px) {
-                background-size: contain;
-                min-height: 300px;
+                background-size: cover;
+                min-height: 240px;
                 filter: brightness(0.6);
             }
             .overlay {
@@ -1416,9 +1550,9 @@
     .recently-added {
         padding: 50px 0;
 
-        // @media (max-width: 450px) {
-        //     padding: 0;
-        // }
+        @media (max-width: 450px) {
+            padding: 25px 0px;
+        }
 
         background-color: #f7f7f7;
         .back-img {
@@ -1462,8 +1596,7 @@
             //     font-size: 13px;
             // }
 
-            background: transparent linear-gradient(180deg, rgba(253, 73, 101, 1) 0%, rgba(253, 115, 99, 1) 100%) 0% 0%
-                no-repeat padding-box;
+            background: #184d47;
             position: absolute;
             display: inline-block;
             text-align: center;
@@ -1667,10 +1800,10 @@
     }
     .how-it-works {
         background-color: #f7f7f7;
-        padding: 100px 0px 50px 0px;
+        padding: 50px 0px;
 
         @media (max-width: 450px) {
-            padding: 0px;
+            padding: 25px 0px;
         }
 
         .container{
@@ -1737,9 +1870,258 @@
         
         
     }
+    .top-searched-areas {
+        background-color: #f7f7f7;
+        padding: 50px 0px;
+
+        @media (max-width: 450px) {
+            padding: 25px 0px;
+        }
+
+        .container{
+            display: flex;
+            margin: auto !important;
+            padding: 0;
+
+            @media (max-width: 450px) {
+                display: block;
+                padding: var(--bs-gutter-x, .75rem);;
+            }
+
+            .card-container{
+                margin: 0% 2%;
+                width: 100%;
+
+                @media (max-width: 450px) {
+                    width: auto;
+                }
+            }
+
+            .card {
+                text-align: center;
+                border: none;
+                border-radius: 20px;
+                height: 100%;
+                position: relative;
+                background: transparent;
+
+                @media (max-width: 450px) {
+                    height: fit-content;
+                }
+
+                .card-body{
+                    position: absolute;
+                    bottom: 10px;
+
+                    @media (max-width: 450px) {
+                        padding-bottom: 0px;
+                    }
+
+                    .card-title{
+                        color: white;
+
+                        @media (max-width: 450px) {
+                            font-size: 15px;
+                        }
+                    }
+                    .card-text {
+                        margin-top: 15px;
+                        color: #6a6a6a;
+                        font-size: large;
+                    }
+                }
+                
+    
+                .icons {
+                    border-radius: 50%;
+                    height: 100%;
+
+                    @media (max-width: 450px) {
+                        // margin: 20px auto 10px;
+                    }
+
+                    img {
+                        // width: 32px;
+                        // max-height: 35px;
+                    }
+
+                    
+                }
+    
+                .card-body {
+                    // padding-bottom: 70px;
+                    // padding-top: 30px;
+                }
+
+                &:hover {
+                    .card-title {
+                        color: #f55441;
+                    }
+    
+                    box-shadow: 8px 3px 30px;
+                    transition: 0.3s;
+                }
+            }
+        }
+        
+        
+    }
+
+    .share-your-quests {
+        background-color: #f7f7f7;
+        padding: 50px 0px;
+
+        @media (max-width: 450px) {
+            padding: 25px 25px;
+        }
+
+        .container{
+            display: flex;
+            margin: auto !important;
+            padding: 0;
+            background: rgb(255, 255, 255, 0.2) url("../../../../assets/images/share_your_quests.png") 0% 0% padding-box;
+            border-radius: 25px;
+
+            img{
+                width: 100%;
+                filter: opacity(0.4);
+            }
+
+            button{
+                background: #FD4965; 
+                color: white; 
+                border: 0px solid; 
+                padding: 10px 10px; 
+                border-radius: 10px;
+            }
+
+            .quest{
+                // position: absolute;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 20px;
+                justify-content: space-between;
+                height: 100%;
+
+                @media (max-width: 450px) {
+                    padding: 0px;
+                }
+
+                .description{
+                    padding: 20px;
+                    width: 70%;
+                    margin: 0px;
+                    display: inline-block;
+
+                    @media (max-width: 450px) {
+                        width: 100%;
+                        padding: 20px 0px;
+                    }
+                }
+            }
+
+
+            @media (max-width: 450px) {
+                display: block;
+                padding: var(--bs-gutter-x, .75rem);;
+            }
+        }
+        
+        
+    }
+
+    .top-developers {
+        background-color: #f7f7f7;
+        padding: 50px 0px;
+
+        @media (max-width: 450px) {
+            padding: 25px 0px;
+        }
+
+        .container{
+            display: flex;
+            margin: auto !important;
+            padding: 0px;
+
+            @media (max-width: 450px) {
+                display: block;
+                padding: var(--bs-gutter-x, .75rem);;
+            }
+
+            .card-container{
+                margin: 0% 2%;
+                width: 100%;
+
+            }
+
+            .card {
+                text-align: center;
+                border: none;
+                border-radius: 20px;
+                height: 100%;
+                position: relative;
+                background: white;
+                padding: 15px 15px;
+                align-items: center;
+
+                @media (max-width: 450px) {
+                    height: fit-content;
+                }
+
+                .card-body{
+
+                    @media (max-width: 450px) {
+                        padding-bottom: 0px;
+                    }
+
+                    .card-title{
+                        color: black;
+
+                        @media (max-width: 450px) {
+                            font-size: 15px;
+                        }
+                    }
+                    .card-text {
+                        margin-top: 15px;
+                        color: #6a6a6a;
+                        font-size: large;
+                    }
+                }
+                
+    
+                .icons {
+                    height: 100px;
+                    width: 100px;
+
+                    @media (max-width: 450px) {
+                        margin: 20px auto 10px;
+                    }
+
+                    img {
+                        // width: 32px;
+                        // max-height: 35px;
+                    }
+
+                    
+                }
+    
+                &:hover {
+                    .card-title {
+                        color: #f55441;
+                    }
+    
+                    box-shadow: 8px 3px 30px;
+                    transition: 0.3s;
+                }
+            }
+        }
+        
+        
+    }
     .download-app {
-        display: none;
-        padding: 8% 6% 10% 6%;
+        padding: 12% 6% 12%;
+        display: flex;
 
         @media (max-width: 450px) {
             flex-direction: column-reverse;
@@ -1758,7 +2140,7 @@
         background-color: #f7f7f7;
         // padding: 200px 0px;
         @media (max-width: 1024px) {
-            padding-top: 60px;
+            padding-top: 80px;
         }
         @media (max-width: 768px) {
             padding: 750x 0px;
@@ -1766,19 +2148,19 @@
         .left-sec {
             .downlaod {
                 display: flex;
-                justify-content: center;
+                justify-content: flex-start;
 
                 img {
-                    width: 220px;
+                    width: 35%;
                     @media (max-width: 1024px) {
                         width: 165px;
                     }
-                    margin-bottom: 40px;
+                    // margin-bottom: 40px;
                     margin-right: 5px;
                     display: inline-block;
                     cursor: pointer;
                     @media (max-width: 768px) {
-                        width: 170px;
+                        width: 50%;
                     }
                 }
             }
@@ -1812,7 +2194,7 @@
         }
 
         .description{
-            margin-bottom: 120px;
+            // margin-bottom: 120px;
 
             @media (max-width: 450px) {
                 margin-bottom: 35px;
@@ -1826,16 +2208,15 @@
             }
 
             .holder {
-                height: 80%;
+                height: 260px;
                 overflow: visible;
                 position: relative;
-                background: transparent linear-gradient(180deg, rgba(253, 73, 101, 1) 0%, rgba(253, 115, 99, 1) 100%) 0% 0%
-                    no-repeat padding-box;
+                background: #184d47;
                 @media (max-width: 768px) {
                     height: 50%;
                 }
                 .iphone {
-                    height: 720px;
+                    height: 650px;
                     position: absolute;
                     right: 5%;
                     top: -52%;
@@ -1864,7 +2245,8 @@
                     position: absolute;
                     right: 43%;
                     top: 14%;
-                    width: 215px;
+                    height: 385px;
+                    
                     @media (max-width: 1440px) {
                         width: 163px;
                     }
@@ -1873,7 +2255,7 @@
                         top: 10%;
                     }
                     @media (max-width: 450px) {
-                        width: 114px;
+                        height: 235px;
                     }
                     @media (max-width: 320px) {
                         width: 94px;
@@ -1918,7 +2300,7 @@
         background-color: #f7f7f7;
 
         @media (max-width: 450px) {
-            padding: 30px 0px 0px 0px;
+            padding: 25px 0px;
         }
 
         .card{
