--- a/src/app/shared/components/how-it-works/for-seller-landlord/for-seller-landlord.component.scss
+++ b/src/app/shared/components/how-it-works/for-seller-landlord/for-seller-landlord.component.scss
@@ -46,7 +46,7 @@
                 width: 40px;
                 height: 40px;
                 background-color: #f7f7f7;
-                color: #ff725f;
+                color: #184d47;
                 text-align: center;
                 border-radius: 50%;
                 vertical-align: middle;
