--- a/src/app/shared/components/my-visits/my-visits.component.scss
+++ b/src/app/shared/components/my-visits/my-visits.component.scss
@@ -12,6 +12,7 @@
             border: 0;
             outline: 0;
             box-shadow: 0px 3px 6px #59595919;
+            // width: fit-content;
            
             // font-size: 11px;
 
@@ -25,7 +26,7 @@
             position: absolute;
             margin-left: 15px;
             margin-top: 12px;
-            color: #FF725F;
+            color: #184d47;
             // @media only screen and (min-width: 1024px) and (max-width: 1440px) {
             //     margin-top: 7px;
             // }
@@ -72,8 +73,8 @@
                     .reschedule {
                         min-width: 70%;
                         background: #fff;
-                        color: #FF725F;
-                        border: 1px solid #FF725F;
+                        color: #184d47;
+                        border: 1px solid #184d47;
                         border-radius: 10px;
                         margin-top: 20px;
                     }
@@ -124,8 +125,8 @@
             width: 90%;
             height: 50px;
             background: #fff;
-            color: #FF725F;
-            border:1px solid #FF725F;
+            color: #184d47;
+            border:1px solid #184d47;
             border-radius: 5px;
         }
     }
