--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -879,6 +879,24 @@
 
         </ng-template>
     </div>
+
+        <ng-template #CountryPop >
+            <div class="country-popup">
+                <h2>Select your country:</h2>
+                <div class="country-list">
+                  <div class="country-item" (click)="selectCountry('Egypt')" [class.selected]="selectedCountry === 'Egypt'">
+                    <img src="https://www.countryflags.io/EG/flat/64.png">
+                    <span>Egypt</span>
+                  </div>
+                  <div class="country-item" (click)="selectCountry('Saudi Arabia')" [class.selected]="selectedCountry === 'Saudi Arabia'">
+                    <img src="https://www.countryflags.io/SA/flat/64.png">
+                    <span>Saudi Arabia</span>
+                  </div>
+                </div>
+              </div>
+        </ng-template>
+
+    
 </div>
 
 <div *ngIf="selected_country == 'saudi'" class="coming-soon">
